--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -73,13 +73,13 @@ RUN apt -y install mariadb-server
 ################# IOT DATA
 WORKDIR IotSolution
 
-RUN wget --no-check-certificate 'https://docs.google.com/uc?export=download&id=1yRgDYrWnHu74NYX9GMAVDjR10ZyfoZvh' -O IoTData.zip
-RUN chmod +x IoTData.zip
-RUN unzip IoTData.zip
+RUN wget --no-check-certificate 'https://docs.google.com/uc?export=download&id=1BR4C-eMfvgVugeL0KRDRMA1OCqGkvsVB' -O hospital.zip
+RUN chmod +x hospital.zip
+RUN unzip hospital.zip
 
-RUN wget --no-check-certificate 'https://docs.google.com/uc?export=download&id=1_RICecxEZUjuCfm_MxPGwrOXxQ5w179O' -O dsntmlidmain.csv
-RUN chmod +x dsntmlidmain.csv
-RUN rm -rf IoTData.zip
+RUN wget --no-check-certificate 'https://docs.google.com/uc?export=download&id=1aLxDIwO-6vKuSUwkY25m4X7CtBlGCwqT' -O hospital.csv
+RUN chmod +x hospital.csv
+RUN rm -rf hospital.zip
 
 WORKDIR /
 
